Added figure printing

--- a/hydrogen2D.org
+++ b/hydrogen2D.org
@@ -1,7 +1,7 @@
 #+title: MS Research Project
 #+author: Devon Walker
 #+email: devonw@andrew.cmu.edu
-#+TODO: TODO(t) INPROGRESS(w!) | DONE(d!) CANCELED(c!)
+#+TODO: TODO(t) INPROGRESS(w) | DONE(d) CANCELED(c)
 
 * Journal
 ** 2016-05-19 Thu
@@ -858,16 +858,20 @@ Use the following works to generate a table with comparisons of H2 transport
 
 * Scripts
 ** Toolbox
-#+BEGIN_SRC python :tangle devon_toolbox.py
+#+BEGIN_SRC python :tangle devon_toolbox.py :results drawer
 import os
 import sys
-import numpy as np
+from types import ModuleType
 
 from ase import Atom, Atoms
 from ase.io import write as ase_write
 from ase.visualize import view
 from jasp import *
+import numpy as np
+import matplotlib.pyplot as plt
 
+import seaborn as sns
+sns.set_style("white")
 
 def bp(info=None):
     """A breakpoint to view something and stop the rest of the script."""
@@ -986,23 +990,93 @@ def closest_atom_to_height(atoms, height):
     return closest
 
 
-def print_image(name, atoms):
-    print(write_image(name, atoms))
+def spline(x, y, points=200):
+    """Return x and y spline values over the same range as x."""
+    from scipy.interpolate import interp1d
+    spline = interp1d(x, y, kind='cubic')
+    x_lin = np.linspace(x[0], x[-1], points)
+    y_interp = spline(x_lin)
+
+    return [x_lin, y_interp]
 
 
-def write_image(name, atoms):
-    file_path = './img/' + name + '.png'
+def get_neighbors(atoms, index, layer, cutoff=4.0):
+    """Return neighbor indices of the atom at index for a cutoff distance.
+
+    Determines a list of neighboring atoms to the index atom. It uses a cutoff distance to determine the absolute distance away from an atom that would constitute it as a neighbor.
+
+    Args:
+        atoms (Atoms): Cell of atoms with multiple layers of a 2D material.
+        index (int): atoms[index] is the atom used to find its neighbors.
+        layer (List[int]): Indices of atoms in the layer of question.
+        cutoff (float): If an atom's position away is less than cutoff, it is a neighbor.
+        
+    Returns:
+        A list of indices (int) of neighbors in atoms.
+    """
+    neighbors = []
+    pos = atoms[index].position
+    layer_atoms = [a for a in atoms if a.index in layer]
+    for a in layer_atoms:
+        dist = np.linalg.norm(a.position - pos)
+        if dist <= cutoff and dist is not 0.000:
+            neighbors.append(a.index)
+
+    return neighbors
+
+
+def print_image(path, data, fig_name=None, caption=None):
+    if caption is not None:
+        print('#+CAPTION: {}'.format(caption))
+    if fig_name is not None:
+        print('#+NAME: fig:{}'.format(fig_name))
+    print(write_image(path, data))
+
+
+def write_image(path, data, options=None):
+    file_path = './img/' + path
     directory = file_path[:file_path.rfind('/')]
     if not os.path.exists(directory):
         os.makedirs(directory)
-#    atoms.rotate('x', np.pi/-5) # TODO: do a .copy() instead of this
-    ase_write(file_path, atoms)
+    
+    if isinstance(data, ModuleType):
+        if data.__name__ == "matplotlib.pyplot":
+            data.savefig(file_path)
+    elif isinstance(data, Atoms):
+        #atoms.rotate('x', np.pi/-5) # TODO: do a .copy() instead of this
+        file_path += '.png'
+        ase_write(file_path, data)
+
+    else:
+        print("No functionality for type = {}".format(type(data)))
+
     return '[[' + file_path + ']]'
 #+END_SRC
 
 #+RESULTS:
 :RESULTS:
 :END:
+
+*** Examples
+**** get_neighbors
+#+BEGIN_SRC python
+from jasp import *
+from ase import Atoms, Atom
+import devon_toolbox as dtb
+
+with jasp('dft/material/g-bi/final') as calc:
+    atoms = calc.get_atoms()
+i = 3
+atoms = atoms.repeat([i,i,1])
+
+struct = dtb.structure(atoms)
+neighbors = dtb.get_neighbors(atoms, 17, struct['layers'][0])
+dtb.paint_atoms(atoms, neighbors)
+dtb.bp(atoms)
+#+END_SRC
+
+#+RESULTS:
+
 
 ** 2016-03-07: Remote copying
 *Note 2016-05-18* - Copying is better done by maintaining the git repo. 
@@ -1164,8 +1238,92 @@ Suggest more points to improve the resolution of a total energy curve for a tran
 #+END_SRC
 
 * DFT
-** Parameters
-- Vaccuum space between gas and 
+** Testing
+*** DONE nsw test
+    CLOSED: [2016-06-09 Thu 09:19]
+
+Brief test to understand if nsw is having an effect on my calculations being run in the queue.
+
+Follow-up (spoilers): it wasn't.
+
+ #+BEGIN_SRC python :results drawer
+import sys
+
+from ase import Atom, Atoms
+from ase.visualize import view
+from ase.io import write as ase_write
+from jasp import *
+
+import devon_toolbox as dtb
+
+
+a = 2.46  # lattice constant
+b = 3.49  # interlayer distance
+gap = np.array([0., 0., b])
+vac = 20. # vaccuum on either side of graphene
+
+a1 = a * np.array([3.0**0.5/2., -1./2., 0.])
+a2 = a * np.array([3.0**0.5/2., 1./2., 0.])
+a3 = np.array([0., 0., vac])
+
+layer1_height = 1./2. * (a3 + gap)
+layer2_height = 1./2. * (a3 - gap)
+rA1 = 0. + layer1_height
+rB1 = a * np.array([1./3.**0.5, 0., 0.]) + layer1_height
+rA2 = a * np.array([1./3.**0.5, 0., 0.]) + layer2_height
+rB2 = a * np.array([2./3.**0.5, 0., 0.]) + layer2_height
+
+atoms = Atoms([Atom('C', rA1),
+               Atom('C', rB1),
+               Atom('C', rA2),
+               Atom('C', rB2)],
+               cell=[a1, a2, a3])
+
+i = 3
+atoms = atoms.repeat([i,i,1])
+del atoms[17:19]
+
+nsw = [0]
+print("Did not converge: [10]")
+
+def calculate(nsw):
+    name = 'material/g-bi/3x3/pore=1/test/nsw={:0.0f}'.format(nsw)
+    dtb.print_image(name, atoms)
+
+    with jasp('./dft/' + name,
+                encut=520,
+                kpts=(6,6,1),
+                xc='PBE',          # GGA functional type
+                ismear=0,          # Gaussian smearing
+                sigma=0.2,         # "Metallic" system smearing
+                isif=2,            # relax positions only
+                ibrion=2,          # conjugate gradient optimizer
+                nsw=nsw,             # max number of steps to relax
+                atoms=atoms) as calc:
+        try:
+            calc.calculate()
+            energy = atoms.get_potential_energy()/len(atoms)
+            dtb.status_converged(energy, float(get_elapsed_time(calc)))
+        except (VaspSubmitted, VaspQueued):
+            dtb.status_inprogress()
+            ready = False
+            pass
+
+
+for n in nsw:
+    print("nsw: {:}".format(n))
+    calculate(n)
+ #+END_SRC
+
+ #+RESULTS:
+ :RESULTS:
+ Did not converge: [10]
+ nsw: 0
+ [[./img/material/g-bi/3x3/pore=1/test/nsw=0.png]]
+ Final structure calculation: Energy/f.u. = -8.742. Calculation time: 308 min.
+ :END:
+
+ The calculation did not converge for nsw=10 (probably should have expected).
 
 ** Material
 *** Graphene monolayer
@@ -1227,7 +1385,7 @@ Final structure calculation: Atoms: 2. Energy/f.u. = -9.228. Calculation time: 6
 [[./img/material/g-mono/final.png]]
 :END:
 
-**** Pore=1 (One carbon defect)
+**** TODO Pore=1 (One carbon defect)
 ***** DONE 3x3. Non-centered, standard spacing
       CLOSED: [2016-06-02 Thu 14:44]
 Looking back, the non-centered versions of these calculations are not as intuitive to watch in a movie format. Also, the desired ease of having the symmetry point being at the gamma point does not carry to pore sizes greater than 1.
@@ -1417,15 +1575,13 @@ with jasp('./dft/' + name,
 
 #+RESULTS:
 :RESULTS:
-Position of defect: [ 5.681  0.     4.   ]
-[[./img/material/g-mono/3x3/pore=1/final.png]]
-Final structure calculation: Energy/f.u. = -8.759. Calculation time: 207 min.
+7.38
 :END:
 
 As expected, the energy is the same as the energies of the non-centered calculations.
 
-***** TODO 4x4, 5x5, 6x6
-****** TODO Same kpts
+***** INPROGRESS 4x4, 5x5, 6x6
+****** INPROGRESS Same kpts
 Calculate the energies for a monolayer of graphene with a single carbon pore for larger unitcells (more spacing between the pores).
 
 #+BEGIN_SRC python :results drawer
@@ -1494,19 +1650,17 @@ size=3x3
 Final structure calculation: Energy/f.u. = -8.743. Calculation time: 16 min.
 size=4x4
 [[./img/material/g-mono/4x4/pore=1/convergence/size.png]]
-Errors found:
-Ions/cell Converged: True
-
 Final structure calculation: Energy/f.u. = -8.959. Calculation time: 87 min.
 size=5x5
 [[./img/material/g-mono/5x5/pore=1/convergence/size.png]]
-Final structure calculation: In progress.
+Final structure calculation: Energy/f.u. = -9.056. Calculation time: 872 min.
 size=6x6
 [[./img/material/g-mono/6x6/pore=1/convergence/size.png]]
 Final structure calculation: In progress.
 :END:
 
-****** TODO kpts differing by size
+****** DONE kpts differing by size
+       CLOSED: [2016-06-09 Thu 10:27]
 Calculate the energies for a monolayer of graphene with a single carbon pore for larger unitcells (more spacing between the pores).
 
 #+BEGIN_SRC python :results drawer
@@ -1566,27 +1720,13 @@ for i, p, k in zip(sizes, pores, kpts):
 #+END_SRC
 
 #+RESULTS:
-:RESULTS:
-size=2x2
-[[./img/material/g-mono/2x2/pore=1/convergence/size/kpts=5.png]]
-Final structure calculation: In progress.
-size=3x3
-[[./img/material/g-mono/3x3/pore=1/convergence/size/kpts=5.png]]
-Final structure calculation: In progress.
-size=4x4
-[[./img/material/g-mono/4x4/pore=1/convergence/size/kpts=5.png]]
-Final structure calculation: In progress.
-size=5x5
-[[./img/material/g-mono/5x5/pore=1/convergence/size/kpts=1.png]]
-Final structure calculation: In progress.
-size=6x6
-[[./img/material/g-mono/6x6/pore=1/convergence/size/kpts=1.png]]
-Final structure calculation: In progress.
-:END:
 
-**** Pore=10 (Ten carbon defect)
+**** TODO Pore=10 (Ten carbon defect)
 ***** DONE 4x4
       CLOSED: [2016-06-02 Thu 14:47]
+****** TODO final
+change path to /final
+
 #+BEGIN_SRC python :results drawer
 from ase import Atom, Atoms
 from ase.io import write as ase_write
@@ -1595,6 +1735,8 @@ from jasp import *
 import numpy as np
 import sys
 #JASPRC['queue.walltime'] = '10:00:00'
+
+import devon_toolbox as dtb
 
 
 def print_converged(num_atoms, energy, time):
@@ -1621,6 +1763,7 @@ del atoms[26]
 del atoms[17:21]
 del atoms[11:15]
 del atoms[5]
+
 
 name = 'material/g-mono/4x4/pore=10/vac=16'
 
@@ -1655,7 +1798,78 @@ Final structure calculation: Atoms: 22. Energy/f.u. = -8.167. Calculation time: 
 [[./img/material/g-mono/4x4/pore=10/vac=16.png]]
 :END:
 
-***** TODO 5x5
+****** INPROGRESS Convergence: kpts
+
+#+BEGIN_SRC python :results drawer
+import numpy as np
+import sys
+
+from ase import Atom, Atoms
+from ase.io import write as ase_write
+from ase.visualize import view
+from jasp import *
+#JASPRC['queue.walltime'] = '10:00:00'
+#JASPRC['queue.mem'] = '4GB'
+
+import devon_toolbox as dtb
+
+
+with jasp("dft/material/g-mono/final") as calc:
+    atoms = calc.get_atoms()
+
+i = 4
+atoms = atoms.repeat((i,i,1))
+
+print('Graphene 4x4 pore=10:'.format(i))
+del atoms[26]
+del atoms[17:21]
+del atoms[11:15]
+del atoms[5]
+
+kpts = [1, 3, 5]
+
+name = 'material/g-mono/4x4/pore=10/convergence'
+dtb.print_image(name, atoms)
+
+def calculate(k):
+    with jasp('./dft/' + name + '/kpts={0:0.0f}'.format(k),
+                encut=520,
+                kpts=(k,k,1),
+                xc='PBE',          # GGA functional type
+                ismear=0,          # Gaussian smearing
+                sigma=0.2,         # "Metallic" system smearing
+                isif=2,            # relax positions only
+                ibrion=2,          # conjugate gradient optimizer
+                nsw=0,             # max number of steps to relax
+                atoms=atoms) as calc:
+        try:
+            calc.calculate()
+            energy = atoms.get_potential_energy()/len(atoms)
+            dtb.status_converged(energy, float(get_elapsed_time(calc)))
+        except (VaspSubmitted, VaspQueued):
+            dtb.status_inprogress()
+            ready = False
+            pass
+
+for k in kpts:
+    print("kpts={0}x{0}x1".format(k))
+    calculate(k)
+#+END_SRC
+
+#+RESULTS:
+:RESULTS:
+Graphene 4x4 pore=10:
+[[./img/material/g-mono/4x4/pore=10/convergence.png]]
+kpts=1x1x1
+Final structure calculation: In progress.
+kpts=3x3x1
+Final structure calculation: In progress.
+kpts=5x5x1
+Final structure calculation: In progress.
+:END:
+
+***** DONE 5x5
+      CLOSED: [2016-06-09 Thu 23:25]
 ****** DONE final
        CLOSED: [2016-06-08 Wed 15:42]
 #+BEGIN_SRC python :results drawer
@@ -1720,7 +1934,10 @@ Final structure calculation: Energy/f.u. = -8.604. Calculation time: 2933 min.
 [[./img/material/g-mono/5x5/pore=10/final.png]]
 :END:
 
-****** TODO Convergence: kpts
+Looking at the structure in view(atoms) shows that the structure has not changed at all from the base structure. All lattice constants are still 2.46, though the energy/f.u. is higher. Not sure if this structure is accurate.
+
+****** DONE Convergence: kpts
+       CLOSED: [2016-06-09 Thu 22:21]
 
 #+BEGIN_SRC python :results drawer
 import numpy as np
@@ -1785,13 +2002,14 @@ Graphene 5x5 pore=10:
 kpts=1x1x1
 Final structure calculation: Energy/f.u. = -8.580. Calculation time: 96 min.
 kpts=3x3x1
-Final structure calculation: In progress.
+Final structure calculation: Energy/f.u. = -8.604. Calculation time: 966 min.
 kpts=5x5x1
-Final structure calculation: In progress.
+Final structure calculation: Energy/f.u. = -8.604. Calculation time: 1098 min.
 :END:
 
+Looks to be converged within 0.001 eV with a 3x3x1 k-point grid. A 1x1x1 grid is within ~0.02 eV. 
+
 ***** TODO 6x6
-Note the k-point grid in this case has been changed from 6x6x1 to 1x1x1.
 
 #+BEGIN_SRC python :results drawer
 import numpy as np
@@ -1855,11 +2073,12 @@ Final structure calculation: In progress.
 :END:
 
 *** Graphene bilayer
-**** DONE Pristine
-     CLOSED: [2016-06-02 Thu 14:42]
-Structure obtained from https://www.tfkp.physik.uni-erlangen.de/download/theses/master_daniel-branski.pdf.
+**** Pristine
+***** DONE final
+      CLOSED: [2016-06-09 Thu 10:32]
+ Structure obtained from https://www.tfkp.physik.uni-erlangen.de/download/theses/master_daniel-branski.pdf.
 
-#+BEGIN_SRC python :results drawer
+ #+BEGIN_SRC python :results drawer
 import sys
 
 from ase import Atom, Atoms
@@ -1922,18 +2141,17 @@ with jasp('./dft/' + name,
 file_path = './img/' + name + '.png'
 ase_write(file_path, atoms)
 print('[[' + file_path + ']]')
-#+END_SRC
+ #+END_SRC
 
-#+RESULTS:
-:RESULTS:
-Final structure calculation: Atoms: 4. Energy/f.u. = -9.225. Calculation time: 14 min.
-[[./img/material/g-bi/final.png]]
-:END:
+ #+RESULTS:
+ :RESULTS:
+ Final structure calculation: Atoms: 4. Energy/f.u. = -9.225. Calculation time: 14 min.
+ [[./img/material/g-bi/final.png]]
+ :END:
 
 **** TODO Pore=1
-
-***** DONE 3x3
-      CLOSED: [2016-06-08 Wed 16:55]
+***** TODO 3x3
+TODO: Update path to /final
 
 #+BEGIN_SRC python :results drawer
 import sys
@@ -1942,6 +2160,8 @@ from ase import Atom, Atoms
 from ase.visualize import view
 from ase.io import write as ase_write
 from jasp import *
+
+import devon_toolbox as dtb
 
 
 def print_converged(num_atoms, energy, time):
@@ -2009,7 +2229,7 @@ Final structure calculation: Atoms: 34. Energy/f.u. = -8.759. Calculation time: 
 [[./img/material/g-bi/3x3/pore=1.png]]
 :END:
 
-***** TODO 4x4
+***** INPROGRESS 4x4
 
 #+BEGIN_SRC python :results drawer
 from ase import Atom, Atoms
@@ -2055,89 +2275,9 @@ with jasp('./dft/' + name,
 Final structure calculation: In progress.
 :END:
 
-**** TODO Pore=1 nsw test
-
-#+BEGIN_SRC python :results drawer
-import sys
-
-from ase import Atom, Atoms
-from ase.visualize import view
-from ase.io import write as ase_write
-from jasp import *
-
-import devon_toolbox as dtb
-
-
-a = 2.46  # lattice constant
-b = 3.49  # interlayer distance
-gap = np.array([0., 0., b])
-vac = 20. # vaccuum on either side of graphene
-
-a1 = a * np.array([3.0**0.5/2., -1./2., 0.])
-a2 = a * np.array([3.0**0.5/2., 1./2., 0.])
-a3 = np.array([0., 0., vac])
-
-layer1_height = 1./2. * (a3 + gap)
-layer2_height = 1./2. * (a3 - gap)
-rA1 = 0. + layer1_height
-rB1 = a * np.array([1./3.**0.5, 0., 0.]) + layer1_height
-rA2 = a * np.array([1./3.**0.5, 0., 0.]) + layer2_height
-rB2 = a * np.array([2./3.**0.5, 0., 0.]) + layer2_height
-
-atoms = Atoms([Atom('C', rA1),
-               Atom('C', rB1),
-               Atom('C', rA2),
-               Atom('C', rB2)],
-               cell=[a1, a2, a3])
-
-i = 3
-atoms = atoms.repeat([i,i,1])
-del atoms[17:19]
-
-nsw = [0]
-print("Did not converge: [10]")
-
-def calculate(nsw):
-    name = 'material/g-bi/3x3/pore=1/test/nsw={:0.0f}'.format(nsw)
-    dtb.print_image(name, atoms)
-
-    with jasp('./dft/' + name,
-                encut=520,
-                kpts=(6,6,1),
-                xc='PBE',          # GGA functional type
-                ismear=0,          # Gaussian smearing
-                sigma=0.2,         # "Metallic" system smearing
-                isif=2,            # relax positions only
-                ibrion=2,          # conjugate gradient optimizer
-                nsw=nsw,             # max number of steps to relax
-                atoms=atoms) as calc:
-        try:
-            calc.calculate()
-            energy = atoms.get_potential_energy()/len(atoms)
-            dtb.status_converged(energy, float(get_elapsed_time(calc)))
-        except (VaspSubmitted, VaspQueued):
-            dtb.status_inprogress()
-            ready = False
-            pass
-
-
-for n in nsw:
-    print("nsw: {:}".format(n))
-    calculate(n)
-#+END_SRC
-
-#+RESULTS:
-:RESULTS:
-Did not converge: [10]
-nsw: 0
-[[./img/material/g-bi/3x3/pore=1/test/nsw=0.png]]
-Final structure calculation: Energy/f.u. = -8.742. Calculation time: 308 min.
-:END:
-
-The calculation did not converge for nsw=10 (probably should have expected).
-
 **** TODO Pore=10
-***** Final
+***** CANCELED Final
+      CLOSED: [2016-06-09 Thu 09:14]
 
 #+BEGIN_SRC python :results drawer
 import sys
@@ -2215,7 +2355,9 @@ with jasp('./dft/' + name,
 Final structure calculation: In progress.
 :END:
 
-***** Kpts test
+***** CANCELED Kpts test
+      CLOSED: [2016-06-09 Thu 09:15]
+Test the effect that k-points may have on the convergence of a 6x6 repeated bilayer graphene.
 
 #+BEGIN_SRC python :results drawer
 import sys
@@ -2299,6 +2441,8 @@ for k in kpts:
 :RESULTS:
 :END:
 
+The 
+
 | k-points (ixix1) | Memory requested [GB] |
 |                1 |                   0.9 |
 |                2 |                   3.0 |
@@ -2308,7 +2452,7 @@ for k in kpts:
 |                6 |                  22.9 |
 |                7 |                  10.8 |
 
-***** Minimal resource use
+***** INPROGRESS Minimal resource use
 Run a calculation with the least possible resources. It's okay if the energy is a poor calculation, let's just see if time-wise this type of calculation is feasible.
 
 Some notes
@@ -2316,8 +2460,6 @@ Some notes
 
 
 #+BEGIN_SRC python :results drawer
-import sys
-
 from ase import Atom, Atoms
 from ase.visualize import view
 from ase.io import write as ase_write
@@ -2338,7 +2480,6 @@ pore_l1 = [57, 60, 61, 80, 81, 84, 85, 104, 105, 108]
 pore_l2 = [35, 38, 39, 58, 59, 62, 63, 82, 83, 86]
 pore = pore_l1 + pore_l2
 dtb.make_pore(atoms, pore)
-
 
 name = 'material/g-bi/6x6/pore=10/convergence/minimal'
 dtb.print_image(name, atoms)
@@ -2365,11 +2506,13 @@ with jasp('./dft/' + name,
 
 #+RESULTS:
 :RESULTS:
+[[./img/material/g-bi/6x6/pore=10/convergence/minimal.png]]
+Final structure calculation: In progress.
 :END:
 
 ** Transport
 *** Graphene monolayer
-**** TODO Linear NEB
+**** Linear NEB
 ***** TODO H2 linear-const-const
 
 #+BEGIN_SRC python :results drawer
@@ -2568,8 +2711,7 @@ Distance: -2.00. Energy = -155.269. Calculation time: 477 min.
 
 The free-free calculation did not converge at a molecule height of -1.0 Ang.
 
-**** DONE 3x3 pore=1 - linear
-     CLOSED: [2016-06-08 Wed 16:41]
+**** Linear - 3x3 pore=1
 This is the type of transport I used for the final project in 0640. Essentially, I believe it tries to simulate an ab-initio MD calculation, which I need to look into.
 
 Pros:
@@ -2581,7 +2723,7 @@ Cons:
 - Pore distances must be kept small.
 
 ***** DONE H2
-      CLOSED: [2016-06-08 Wed 16:00]
+      CLOSED: [2016-06-09 Thu 09:12]
 
 Somewhat done for now. The unconstrained graphene + constrained H2 molecule calculations did not finish in time. Unfortunately, that is the one that would be most accurate to what is really going on with the transport.
 
@@ -3103,10 +3245,12 @@ Distance:  0.00. Energy = -169.706. Calculation time: 424 min.
 #+end_example
 
 * Results
-** TODO Final project
-*** Bond length
+** DONE Final project
+   CLOSED: [2016-06-09 Thu 22:20]
+*** DONE Bond length
+    CLOSED: [2016-06-09 Thu 22:20]
 
-#+BEGIN_SRC python
+#+BEGIN_SRC python :results drawer
 from ase import Atom, Atoms
 from ase.visualize import view
 from jasp import *
@@ -3114,6 +3258,9 @@ import numpy as np
 import matplotlib.pyplot as plt
 from scipy.interpolate import interp1d
 import sys
+
+import devon_toolbox as dtb
+
 
 fp_dir = '~/techela/s16-06640/final-project/' # Directory of final project.
 
@@ -3150,13 +3297,13 @@ def plot_spline(x, y, plt, style):
     plt.plot(x_lin, spline(x_lin), style)
 
 file_path = './img/final-project/G-bond-length.png'
-plt.plot(h_rel, BL_h, 'ro', label='H2')
-plt.plot(heights, BL_co2[0], 'go', label='CO2 #1')
-plt.plot(heights, BL_co2[1], 'bo', label='CO2 #2')
-plot_spline(h_rel, BL_h, plt, 'r-')
-plot_spline(heights, BL_co2[0], plt, 'g-')
-plot_spline(heights, BL_co2[1], plt, 'b-')
-plt.xlabel('Molecule distance from graphene plane ($\AA$)')
+plt.plot(h_rel, BL_h, 'ro-', label='H2')
+plt.plot(heights, BL_co2[0], 'go-', label='CO2 #1')
+plt.plot(heights, BL_co2[1], 'bo-', label='CO2 #2')
+#plot_spline(h_rel, BL_h, plt, 'r-')
+#plot_spline(heights, BL_co2[0], plt, 'g-')
+#plot_spline(heights, BL_co2[1], plt, 'b-')
+#plt.xlabel('Molecule distance from graphene plane ($\AA$)')
 plt.ylabel('Bond length ($\AA$)')
 plt.ylim([0.5,3])
 plt.xlim([-3,3])
@@ -3166,11 +3313,14 @@ print('[[' + file_path + ']]')
 #+END_SRC
 
 #+RESULTS:
-: [[./img/final-project/G-bond-length.png]]
+:RESULTS:
+[[./img/final-project/G-bond-length.png]]
+:END:
 
-*** Barrier energy
+*** DONE Barrier energy
+    CLOSED: [2016-06-09 Thu 22:20]
 
-#+BEGIN_SRC python
+#+BEGIN_SRC python :results drawer
 from ase import Atom, Atoms
 from ase.visualize import view
 from jasp import *
@@ -3178,6 +3328,9 @@ import numpy as np
 import matplotlib.pyplot as plt
 from scipy.interpolate import interp1d
 import sys
+
+import devon_toolbox as dtb
+
 
 fp_dir = '~/techela/s16-06640/final-project/' # Directory of final project.
 
@@ -3220,7 +3373,6 @@ def plot_spline(x, y, plt, style):
     print('Max energy: {:0.3f} eV'.format(max(spline(x_lin)))) 
     plt.plot(x_lin, spline(x_lin), style)
 
-print('')
 print('Energy barriers:')
 file_path = './img/final-project/total_energy-comparison.png'
 plt.plot(h_rel, TE_h, 'ro', label='H2')
@@ -3237,14 +3389,14 @@ print('[[' + file_path + ']]')
 #+END_SRC
 
 #+RESULTS:
-: 
-: Energy barriers:
-: Max energy: 1.879 eV
-: Max energy: 4.643 eV
-: [[./img/final-project/total_energy-comparison.png]]
+:RESULTS:
+Energy barriers:
+Max energy: 1.879 eV
+Max energy: 4.643 eV
+[[./img/final-project/total_energy-comparison.png]]
+:END:
 
 ** TODO Transport. Pore=1
-
 #+BEGIN_SRC python
 import copy
 import numpy as np
@@ -3356,9 +3508,9 @@ import numpy as np
 import matplotlib.pyplot as plt
 
 from ase import Atom, Atoms
-from ase.visualize import view
 from jasp import *
 
+import devon_toolbox as dtb
 
 def closest_atom_distance(atoms):
     pos = atoms.get_positions()
@@ -3387,91 +3539,233 @@ for i, (molec, dist, TE) in enumerate(zip(molecs, dists, TEs)):
     TEs[i] = TE
 
 
-file_path = './img/results/convergence-vaccuum-pore=1.png'
-print('#+CAPTION: Vaccuum distance convergence. Height represents distance between closest atom and the graphene plane.')
-print('#+NAME: fig:vaccuum-distance')
 for dist, TE in zip(dists, TEs):
-#    plt.plot(heights, TE)
     plt.plot(dist, TE)
 plt.xlabel('Height ($\AA$)')
 plt.ylabel('Total Energy (eV)')
 plt.xlim([0,8])
 plt.ylim([-0.5,2])
 plt.legend(molecs)
+
+path = 'results/convergence-vaccuum-pore=1.png'
+caption = "Vaccuum distance convergence. Height represents distance between the molecule\'s closest atom and the graphene plane."
+name = "vaccuum-molecule-distance"
+dtb.print_image(path, plt, name, caption)
+#+END_SRC
+
+#+RESULTS:
+:RESULTS:
+#+CAPTION: Vaccuum distance convergence. Height represents distance between the molecule's closest atom and the graphene plane.
+#+NAME: fig:vaccuum-molecule-distance
+[[./img/results/convergence-vaccuum-pore=1.png]]
+:END:
+
+cite:sun-2014-mechan-molec reports between 5-6 Å is the distance of non-interaction for these molecules. They used classical MD with LJ potentials.
+
+It appears that when the leading atom is 4 Å away from the graphene plane, there is no interaction. Since most molecules that we'll be testing are about 2-4 Å in length, it seems reasonable to make the z-direction vaccuum space of the calculations to be 9 Å on either side of the graphene plane. 
+
+This probably the lowest case, as all atoms are constrained and the pore is not functionalized. The carbon atoms in graphene around a pore are not directly inline with the graphene plane.
+
+** DONE Height of carbon atoms around an unfunctionalized graphene pore
+   CLOSED: [2016-06-09 Thu 11:16]
+Show that the carbon atoms around an unfunctionalized graphene pore do not change in height from the rest of the graphene plane.
+
+*** DONE Monolayer graphene 5x5 pore=10
+    CLOSED: [2016-06-09 Thu 11:17]
+Show that at a pore, carbon atoms are not directly in line with the bulk graphene plane.
+
+#+BEGIN_SRC python :results drawer
+import numpy as np
+import matplotlib.pyplot as plt
+
+from ase import Atoms, Atom
+from ase.io import write as ase_write
+from jasp import *
+
+import devon_toolbox as dtb
+
+name = "dft/material/g-mono/5x5/pore=10/final"
+with jasp(name) as calc:
+    atoms = calc.get_atoms()
+
+
+dtb.print_image("results/carbon-5x5-around-pore-vertical", atoms)
+atoms2 = atoms.copy()
+atoms2.rotate('x', np.pi/2)
+dtb.print_image("results/carbon-5x5-around-pore-side", atoms2)
+
+heights = []
+dists = []
+defect = [5.681, 0., 4.]
+center = atoms.cell[2][2] / 2.
+for i, a in enumerate(atoms):
+    dist_defect = np.linalg.norm(a.position - defect)
+    dists.append(dist_defect)
+    heights.append(a.position[2] - center)
+
+plt.plot(dists, heights)
+file_path = './img/results/carbon-5x5-around-pore-plot.png'
+plt.xlabel('Distance from pore ($\AA$)')
+plt.ylabel('Distance from plane center ($\AA$)')
 plt.savefig(file_path)
 print('[[' + file_path + ']]')
 #+END_SRC
 
 #+RESULTS:
 :RESULTS:
-#+CAPTION: Vaccuum distance convergence. Height represents distance between closest atom and the graphene plane.
-#+NAME: fig:vaccuum-distance
-[[./img/results/convergence-vaccuum-pore=1.png]]
+[[./img/results/carbon-5x5-around-pore-vertical.png]]
+[[./img/results/carbon-5x5-around-pore-side.png]]
+[[./img/results/carbon-5x5-around-pore-plot.png]]
 :END:
 
-It appears that when the leading atom is 4 Å away from the graphene plane, there is no interaction. Since most molecules that we'll be testing are about 2-4 Å in length, it seems reasonable to make the z-direction vaccuum space of the calculations to be 9 Å on either side of the graphene plane. 
+*** DONE Monolayer graphene 3x3 pore=1
+    CLOSED: [2016-06-09 Thu 11:17]
+Show that at a pore, carbon atoms are not directly in line with the bulk graphene plane.
 
-cite:sun-2014-mechan-molec reports between 5-6 Å is the distance of non-interaction for these molecules. They used classical MD with LJ potentials.
-
-
-** TODO Monolayer graphene pore distance convergence
-
-#+BEGIN_SRC python
-import matplotlib.pyplot as plt
+#+BEGIN_SRC python :results drawer
 import numpy as np
-import sys
+import matplotlib.pyplot as plt
 
-from ase import Atom, Atoms
+from ase import Atoms, Atom
 from ase.io import write as ase_write
-from ase.visualize import view
 from jasp import *
-#JASPRC['queue.walltime'] = '10:00:00'
-#JASPRC['queue.mem'] = '4GB'
 
 import devon_toolbox as dtb
 
-sizes = [2, 3, 4, 5, 6]
+name = "dft/material/g-mono/3x3/pore=1/final"
+with jasp(name) as calc:
+    atoms = calc.get_atoms()
 
-energies = []
-times = []
 
-for i in sizes:
-    name = 'material/g-mono/{0:0.0f}x{0:0.0f}/pore=1/convergence/size'.format(i)
-    with jasp("dft/" + name) as calc:
-        atoms = calc.get_atoms()
-        energy = atoms.get_potential_energy()/len(atoms)
-        time = float(get_elapsed_time(calc))
+dtb.print_image("results/carbon-3x3-around-pore-vertical", atoms)
+atoms2 = atoms.copy()
+atoms2.rotate('x', np.pi/2)
+dtb.print_image("results/carbon-3x3-around-pore-side", atoms2)
 
-        energies.append(energy)
-        times.append(time)
-        
+heights = []
+dists = []
+defect = [5.681, 0., 4.]
+center = atoms.cell[2][2] / 2.
+for i, a in enumerate(atoms):
+    dist_defect = np.linalg.norm(a.position - defect)
+    dists.append(dist_defect)
+    heights.append(a.position[2] - center)
 
-file_path = './img/results/monolayer-energy_vs_pore_distance.png'
-plt.plot(i, energies, 'b-')
-plt.plot(i, times, 'r-')
-plt.xlabel("Repeated cell size (ixix1)")
+plt.plot(dists, heights)
+file_path = './img/results/carbon-3x3-around-pore-plot.png'
+plt.xlabel('Distance from pore ($\AA$)')
+plt.ylabel('Distance from plane center ($\AA$)')
+plt.savefig(file_path)
+print('[[' + file_path + ']]')
 #+END_SRC
 
+#+RESULTS:
+:RESULTS:
+[[./img/results/carbon-3x3-around-pore-vertical.png]]
+[[./img/results/carbon-3x3-around-pore-side.png]]
+matplotlib.pyplot
+:END:
 
-It would be better to plot the distance between pore centers on the x-axis.
+** TODO Height of carbon atoms around a functionalized graphene pore
+** TODO Monolayer graphene pore distance convergence
+TODO: Update p10times with k-points convergence time for 4x4
+
+Show that as the graphene layers get larger, the negative effect of the pore on the total energy decreases.
+
+#+BEGIN_SRC python :results drawer
+import matplotlib.pyplot as plt
+import numpy as np
+
+from ase import Atom, Atoms
+from jasp import *
+
+import devon_toolbox as dtb
+
+
+sizes = [2, 3, 4, 5, 6]
+kpts =  [5, 5, 5, 1, 1]
+
+energies = []
+dists = []
+times = []
+images = []
+for i, k in zip(sizes, kpts):
+    name = 'dft/material/g-mono/{0:0.0f}x{0:0.0f}/pore=1/convergence/size/kpts={1:0.0f}'.format(i, k)
+
+    with jasp(name) as calc:
+        atoms = calc.get_atoms()
+        energy = atoms.get_potential_energy()/len(atoms)
+        time = float(get_elapsed_time(calc)) / 60 # minutes
+
+    energies.append(energy)
+    dists.append(np.linalg.norm(atoms.cell[0]))
+    times.append(time)
+    images.append(atoms)
+
+# Pristine comparison
+with jasp("dft/material/g-mono/final") as calc:
+    atoms = calc.get_atoms()
+    energy = atoms.get_potential_energy()/len(atoms)
+px = np.linspace(dists[0], dists[-1])
+py = [energy for i in px]
+
+# Pore=10 comparison
+p10dists = [dists[sizes.index(4)], dists[sizes.index(5)]]
+p10energies = [-8.167, -8.604]
+p10times = [1933, 966]
+
+path = 'results/monolayer-energy_vs_pore_distance'
+
+dtb.print_image(path + '-size=2', images[0])
+dtb.print_image(path + '-size=4', images[2])
+dtb.print_image(path + '-size=6', images[-1])
+
+ax1 = plt.gca()
+ax1.plot(px, py, 'g--', label="Pristine graphene")
+ax1.plot(dists, energies, 'go', label="Pore=1")
+spline = dtb.spline(dists, energies)
+ax1.plot(spline[0], spline[1], 'g-')
+ax1.plot(p10dists, p10energies, 'gd-', label="Pore=10")
+
+ax2 = plt.gca().twinx()
+ax2.plot(dists, times, 'ro', label="Pore=1")
+spline = dtb.spline(dists, times)
+ax2.plot(spline[0], spline[1], 'r-')
+ax2.plot(p10dists, p10times, 'rd-', label="Pore=10")
+
+ax1.set_xlabel("Distance between pore centers ($\AA$)")
+ax1.set_ylabel("Energy per atom (eV/f.u.)", color='g')
+ax2.set_ylabel("Calculation time (min)", color='r')
+plt.xlim(dists[0],dists[-1])
+ax1.legend(loc='upper left')
+ax2.legend(loc='upper right')
+
+caption = "The effect of distance between pores on energy and calculation time."
+name = "g-mono-energy_vs_pore_distance"
+dtb.print_image(path + '.png', plt, name, caption)
+#+END_SRC
+
+#+RESULTS:
+:RESULTS:
+[[./img/results/monolayer-energy_vs_pore_distance-size=2.png]]
+[[./img/results/monolayer-energy_vs_pore_distance-size=4.png]]
+[[./img/results/monolayer-energy_vs_pore_distance-size=6.png]]
+#+CAPTION: The effect of distance between pores on energy and calculation time.
+#+NAME: fig:g-mono-energy_vs_pore_distance
+[[./img/results/monolayer-energy_vs_pore_distance.png]]
+:END:
+
+Approaches the pristine limit but calculation time goes way up. This is also one of the best case scenarios - a single missing carbon atom. As the ammount of carbon atoms removed increases, the energy goes up.
 
 ** TODO Charge density view of monolayer graphene pore=10
 
-Show what the charge density looks like about a pore.
+Show what the charge density looks like around a pore.
 
 #+BEGIN_SRC python
-import numpy as np
-import sys
-
-from ase import Atom, Atoms
-from ase.io import write as ase_write
-from ase.visualize import view
 from ase.data import vdw_radii
 from ase.data.colors import cpk_colors
 from enthought.mayavi import mlab
 from jasp import *
-#JASPRC['queue.walltime'] = '10:00:00'
-#JASPRC['queue.mem'] = '2GB'
 
 import devon_toolbox as dtb
 
@@ -3532,4 +3826,3 @@ print('[[' + file_path + ']]')
 #+END_SRC
 
 #+RESULTS:
-
