--- a/hydrogen2D.org
+++ b/hydrogen2D.org
@@ -62,8 +62,6 @@ Possible research idea: Look into pore stability of different passivating molecu
     CLOSED: [2016-06-01 Wed 12:26]
 
 ** 2016-06-02 Thu
-
-
 *** DONE Finish pore=10 for bilayer
     CLOSED: [2016-06-01 Wed 12:26]
 
@@ -72,6 +70,7 @@ Possible research idea: Look into pore stability of different passivating molecu
 ** 2016-06-07 Tue
 ** 2016-06-08 Wed
 ** 2016-06-09 Thu
+Prepared for group meeting research update tomorrow.
 * Meetings
 ** DONE 2016-03-08 4pm
    CLOSED: [2016-03-09 Wed 09:26] DEADLINE: <2016-03-08 Tue 16:00>
